package rec.util.file;

message Volume {
  enum Type {
    NONE = 0;
    CD = 1;
    MUSIC = 2;
    USER = 3;
    VOLUME = 4;
  };

  optional Type type = 1 [default = NONE];
  optional string name = 2;
};

message VolumeFile {
  optional Volume volume = 1;
  repeated string path = 2;
};